crates/jolt_java_fmt/tests/snapshots/corpus__style__layout_fit_boundaries__call_single_argument_ternary.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void method() {
    call(
      xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx ? true : false
    );
  }
}

diagnostics:
(none)
