crates/jolt_java_fmt/tests/snapshots/corpus__style__layout_fit_boundaries__local_variable_nested_ternary.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void method() {
    boolean value =
      xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx ? true : false;
  }
}

diagnostics:
(none)
