crates/jolt_java_fmt/tests/snapshots/corpus__style__layout_fit_boundaries__statement_boundary.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Example {
  void method() {
    call(xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx ? true : false);
    next();
  }
}

diagnostics:
(none)
